--- a/web/index.html
+++ b/web/index.html
@@ -116,6 +116,15 @@
       if ("serviceWorker" in navigator) {
         window.addEventListener("load", function () {
           navigator.serviceWorker.register("/firebase-messaging-sw.js");
+          _flutter.loader.load({
+        onEntrypointLoaded: function(engineInitializer) {
+          engineInitializer.initializeEngine({
+          useColorEmoji: true,
+          }).then(function(appRunner) {
+            appRunner.runApp();
+          });
+        }
+      });
         });
       }
     </script>
